change: major overhaul fixed: routing issues update: homepage/signup/nav component/ signin

--- a/src/pages/Signup/signup.module.css
+++ b/src/pages/Signup/signup.module.css
@@ -13,11 +13,9 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  background-image: radial-gradient(
-    circle farthest-corner at 10% 20%,
-    rgb(129, 110, 114) 0%,
-    rgba(255, 211, 165, 1) 90%
-  );
+  background-image: radial-gradient(circle farthest-corner at 10% 20%,
+      rgb(129, 110, 114) 0%,
+      rgba(255, 211, 165, 1) 90%);
 }
 
 .card {
