--- a/src/pages/Signin/signin.module.css
+++ b/src/pages/Signin/signin.module.css
@@ -28,8 +28,8 @@ a:hover {
   color: #008080;
 }
 
-.checkbox-inline + .checkbox-inline,
-.radio-inline + .radio-inline {
+.checkbox-inline+.checkbox-inline,
+.radio-inline+.radio-inline {
   margin-top: 6px;
 }
 
@@ -37,45 +37,33 @@ a:hover {
 
 body.login {
   background: rgba(241, 242, 181, 1);
-  background: -moz-radial-gradient(
-    center,
-    ellipse cover,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(19, 80, 88, 1) 100%
-  );
-  background: -webkit-gradient(
-    radial,
-    center center,
-    0px,
-    center center,
-    100%,
-    color-stop(0%, rgba(255, 255, 255, 1)),
-    color-stop(100%, rgba(19, 80, 88, 1))
-  );
-  background: -webkit-radial-gradient(
-    center,
-    ellipse cover,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(19, 80, 88, 1) 100%
-  );
-  background: -o-radial-gradient(
-    center,
-    ellipse cover,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(19, 80, 88, 1) 100%
-  );
-  background: -ms-radial-gradient(
-    center,
-    ellipse cover,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(19, 80, 88, 1) 100%
-  );
-  background: radial-gradient(
-    ellipse at center,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(19, 80, 88, 1) 100%
-  );
-  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f1f2b5', endColorstr='#135058', GradientType=1);
+  background: -moz-radial-gradient(center,
+      ellipse cover,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(19, 80, 88, 1) 100%);
+  background: -webkit-gradient(radial,
+      center center,
+      0px,
+      center center,
+      100%,
+      color-stop(0%, rgba(255, 255, 255, 1)),
+      color-stop(100%, rgba(19, 80, 88, 1)));
+  background: -webkit-radial-gradient(center,
+      ellipse cover,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(19, 80, 88, 1) 100%);
+  background: -o-radial-gradient(center,
+      ellipse cover,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(19, 80, 88, 1) 100%);
+  background: -ms-radial-gradient(center,
+      ellipse cover,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(19, 80, 88, 1) 100%);
+  background: radial-gradient(ellipse at center,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(19, 80, 88, 1) 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#f1f2b5', endColorstr='#135058', GradientType=1);
 }
 
 .relative {
@@ -119,9 +107,11 @@ body.login {
 .logo .fa {
   font-size: 50px;
 }
-.login input:focus + .fa {
+
+.login input:focus+.fa {
   color: #fff;
 }
+
 .login-form .form-group {
   margin-right: 0;
   margin-left: 0;
@@ -189,6 +179,7 @@ select:-webkit-autofill {
   box-shadow: inset 0 0 100px 0 #7692a7;
   color: #fff;
 }
+
 #particles-js {
   /*   background: cornflowerblue; */
   width: 100%;
