--- a/src/pages/Signin/signin.module.css
+++ b/src/pages/Signin/signin.module.css
@@ -28,8 +28,8 @@ a:hover {
   color: #008080;
 }
 
-.checkbox-inline+.checkbox-inline,
-.radio-inline+.radio-inline {
+.checkbox-inline + .checkbox-inline,
+.radio-inline + .radio-inline {
   margin-top: 6px;
 }
 
@@ -37,32 +37,44 @@ a:hover {
 
 body.login {
   background: rgba(241, 242, 181, 1);
-  background: -moz-radial-gradient(center,
-      ellipse cover,
-      rgba(255, 255, 255, 1) 0%,
-      rgba(19, 80, 88, 1) 100%);
-  background: -webkit-gradient(radial,
-      center center,
-      0px,
-      center center,
-      100%,
-      color-stop(0%, rgba(255, 255, 255, 1)),
-      color-stop(100%, rgba(19, 80, 88, 1)));
-  background: -webkit-radial-gradient(center,
-      ellipse cover,
-      rgba(255, 255, 255, 1) 0%,
-      rgba(19, 80, 88, 1) 100%);
-  background: -o-radial-gradient(center,
-      ellipse cover,
-      rgba(255, 255, 255, 1) 0%,
-      rgba(19, 80, 88, 1) 100%);
-  background: -ms-radial-gradient(center,
-      ellipse cover,
-      rgba(255, 255, 255, 1) 0%,
-      rgba(19, 80, 88, 1) 100%);
-  background: radial-gradient(ellipse at center,
-      rgba(255, 255, 255, 1) 0%,
-      rgba(19, 80, 88, 1) 100%);
+  background: -moz-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(19, 80, 88, 1) 100%
+  );
+  background: -webkit-gradient(
+    radial,
+    center center,
+    0px,
+    center center,
+    100%,
+    color-stop(0%, rgba(255, 255, 255, 1)),
+    color-stop(100%, rgba(19, 80, 88, 1))
+  );
+  background: -webkit-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(19, 80, 88, 1) 100%
+  );
+  background: -o-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(19, 80, 88, 1) 100%
+  );
+  background: -ms-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(19, 80, 88, 1) 100%
+  );
+  background: radial-gradient(
+    ellipse at center,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(19, 80, 88, 1) 100%
+  );
   filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#f1f2b5', endColorstr='#135058', GradientType=1);
 }
 
@@ -70,8 +82,8 @@ body.login {
   position: relative;
 }
 
-.login-container-wrapper .logo,
-.login-container-wrapper .welcome {
+.loginContainerWrapper .logo,
+.loginContainerWrapper .welcome {
   margin: 0 0 20px 0;
   font-size: 16px;
   color: #fff;
@@ -79,7 +91,7 @@ body.login {
   letter-spacing: 1px;
 }
 
-.login-container-wrapper .logo {
+.loginContainerWrapper .logo {
   text-align: center;
   position: absolute;
   top: -42px;
@@ -92,7 +104,7 @@ body.login {
   box-shadow: 0px 0px 9px 2px #344454;
 }
 
-.login-container-wrapper {
+.loginContainerWrapper {
   max-width: 400px;
   margin: 10% auto 8%;
   padding: 40px;
@@ -108,23 +120,23 @@ body.login {
   font-size: 50px;
 }
 
-.login input:focus+.fa {
+.login input:focus + .fa {
   color: #fff;
 }
 
-.login-form .form-group {
+.loginForm .form-group {
   margin-right: 0;
   margin-left: 0;
 }
 
-.login-form i {
+.loginForm i {
   position: absolute;
   top: 18px;
   right: 20px;
   color: #93a5ab;
 }
 
-.login-form .input-lg {
+.loginForm .input-lg {
   font-size: 16px;
   height: 52px;
   padding: 10px 25px;
@@ -158,7 +170,7 @@ select:-webkit-autofill {
   color: #ddd;
 }
 
-.btn-success {
+.btnSuccess {
   background-color: transparent;
   background-image: none;
   padding: 8px 50px;
@@ -170,17 +182,17 @@ select:-webkit-autofill {
   transition: all ease 0.8s;
 }
 
-.btn-success:focus,
-.btn-success:hover,
-.btn-success.active,
-.btn-success:active {
+.btnSuccess:focus,
+.btnSuccess:hover,
+.btnSuccess.active,
+.btnSuccess:active {
   background-color: transparent;
   border-color: #fff;
   box-shadow: inset 0 0 100px 0 #7692a7;
   color: #fff;
 }
 
-#particles-js {
+#particlesJs {
   /*   background: cornflowerblue; */
   width: 100%;
   height: 100%;
